# nav_pkg

./: .gitignore  00_CLEANUP_COMPLETE.md  ARCHITECTURE.md  CMakeLists.txt  GITHUB_READY.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_UPLOAD_GUIDE.md  QUICK_REFERENCE.md  README.md  UPLOAD_CHECKLIST.md  XFYUN_WATERPLUS_GUIDE.md  package.xml  system_check.sh
config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner_params.yaml  voice_nav_params.yaml  xfyun_config.yaml
launch/: voice_nav_complete.launch  voice_nav_simple.launch
rviz/: nav.rviz
scripts/: semantic_room_extractor.py  speech_recognition_node.py  switch_map.py  voice_nav_manager.py
