<?xml version="1.0"?>
<package format="2">
  <name>nav_pkg</name>
  <version>0.0.0</version>
  <description>The nav_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robot@todo.todo">robot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nav_pkg</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS导航依赖 - 使用depend同时指定build和exec -->
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  
  <!-- 仅运行时依赖（不需要编译） -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>waterplus_map_tools</exec_depend>
  <exec_depend>wpb_home_tutorials</exec_depend>
  <exec_depend>python3</exec_depend>
  
  <!-- 讯飞语音识别依赖 - 使用xfyun_waterplus包 -->
  <exec_depend>xfyun_waterplus</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
